changed research link into gallery, Added Carousel Added New Images Corrected Text alignment of H2 from landing page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 24px;
   margin-top: 20px;
   color: rgba(255, 255, 255, 0.8);
+  text-align: left;
 }
 
 #header h2 span {
@@ -121,6 +122,7 @@ h1, h2, h3, h4, h5, h6 {
   #header h2 {
     font-size: 20px;
     line-height: 30px;
+    text-align: center;
   }
   #header .social-links {
     margin-top: 15px;
